[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/objects/box_2.obj" type="ArrayMesh" id=1]
[ext_resource path="res://assets/materials/paper_yellow.tres" type="Material" id=2]
[ext_resource path="res://assets/materials/_physics/phx_basic.tres" type="PhysicsMaterial" id=3]
[ext_resource path="res://assets/objects/box_top1.obj" type="ArrayMesh" id=4]
[ext_resource path="res://src/race/HingedCrate.gd" type="Script" id=5]

[sub_resource type="ConvexPolygonShape" id=1]
points = PoolVector3Array( -0.617548, 0.59048, 0.617548, -0.617548, -0.608361, 0.617548, -0.617548, 0.59048, -0.617548, -0.617548, -0.608361, -0.617548, -0.617548, 0.59048, -0.617548, -0.617548, -0.608361, -0.617548, 0.617548, 0.59048, -0.617548, 0.617548, -0.608361, -0.617548, 0.617548, 0.59048, -0.617548, 0.617548, -0.608361, -0.617548, 0.617548, 0.59048, 0.617548, 0.617548, -0.608361, 0.617548, 0.617548, 0.59048, 0.617548, 0.617548, -0.608361, 0.617548, -0.617548, 0.59048, 0.617548, -0.617548, -0.608361, 0.617548, 0.617548, -0.608361, -0.617548, -0.617548, -0.608361, -0.617548, 0.617548, -0.608361, 0.617548, -0.617548, -0.608361, 0.617548, 0.617548, 0.59048, -0.617548, 0.617548, 0.59048, 0.617548, 0.581028, 0.59048, -0.581028, 0.581028, 0.59048, 0.581028, 0.581028, 0.59048, -0.581028, 0.581028, 0.59048, 0.581028, 0.581028, -0.5726, -0.581028, 0.581028, -0.5726, 0.581028, -0.617548, 0.59048, 0.617548, -0.617548, 0.59048, -0.617548, -0.581028, 0.59048, 0.581028, -0.581028, 0.59048, -0.581028, -0.617548, 0.59048, 0.617548, -0.581028, 0.59048, 0.581028, -0.581028, -0.5726, -0.581028, 0.581028, -0.5726, -0.581028, -0.581028, -0.5726, 0.581028, 0.581028, -0.5726, 0.581028, -0.581028, 0.59048, 0.581028, -0.581028, 0.59048, -0.581028, -0.581028, -0.5726, 0.581028, -0.581028, -0.5726, -0.581028, 0.581028, 0.59048, 0.581028, -0.581028, 0.59048, 0.581028, 0.581028, -0.5726, 0.581028, -0.581028, -0.5726, 0.581028, -0.581028, 0.59048, -0.581028, 0.581028, 0.59048, -0.581028, -0.581028, -0.5726, -0.581028, 0.581028, -0.5726, -0.581028 )

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( -0.30844, 0.018104, 0.616881, -0.30844, -0.018104, 0.616881, -0.30844, 0.018104, -0.616881, -0.30844, -0.018104, -0.616881, 0.30844, 0.018104, 0.616881, 0.30844, -0.018104, 0.616881, -0.30844, 0.018104, 0.616881, -0.30844, -0.018104, 0.616881, -0.30844, 0.018104, -0.616881, 0.30844, 0.018104, -0.616881, -0.30844, 0.018104, 0.616881, 0.30844, 0.018104, 0.616881, 0.30844, -0.018104, -0.616881, -0.30844, -0.018104, -0.616881, 0.30844, -0.018104, 0.616881, -0.30844, -0.018104, 0.616881, -0.30844, 0.018104, -0.616881, -0.30844, -0.018104, -0.616881, 0.30844, 0.018104, -0.616881, 0.30844, -0.018104, -0.616881, 0.30844, -0.018104, 0.616881, 0.30844, 0.018104, 0.616881, 0.30844, -0.018104, -0.616881, 0.30844, 0.018104, -0.616881 )

[node name="Crate" type="Spatial"]
script = ExtResource( 5 )

[node name="CrateBody" type="RigidBody" parent="."]
collision_layer = 15
collision_mask = 15
mass = 2.0
physics_material_override = ExtResource( 3 )
contacts_reported = 4
contact_monitor = true
sleeping = true

[node name="MeshInstance" type="MeshInstance" parent="CrateBody"]
transform = Transform( 0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.35, 0, 0, 0 )
material_override = ExtResource( 2 )
mesh = ExtResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="CrateBody"]
transform = Transform( 0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.35, 0, 0, 0 )
visible = false
shape = SubResource( 1 )

[node name="HingeJoint" type="HingeJoint" parent="CrateBody" groups=[
"hinges",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.216, 0.214, 0 )
nodes/node_a = NodePath("..")
nodes/node_b = NodePath("../../RigidBody2")
angular_limit/enable = true
angular_limit/upper = 0.0
angular_limit/lower = -179.0

[node name="RigidBody2" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.108, 0.214, 0 )
collision_layer = 15
collision_mask = 15
mass = 0.5
physics_material_override = ExtResource( 3 )
sleeping = true

[node name="MeshInstance" type="MeshInstance" parent="RigidBody2"]
transform = Transform( 0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.35, 0, 0, 0 )
material_override = ExtResource( 2 )
mesh = ExtResource( 4 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="RigidBody2"]
transform = Transform( 0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.35, 0, 0, 0 )
visible = false
shape = SubResource( 2 )

[connection signal="body_entered" from="CrateBody" to="." method="_on_body_entered"]
[connection signal="body_exited" from="CrateBody" to="." method="_on_body_exited"]
